fix send button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <form class="popup-text">
                 <textarea name="comment" minlength="10" placeholder="Опишите ваше мнение или проблему"></textarea>
-                <button class="submit" type="submit">Отправить</button>
+                <button class="submit" disabled="enabled" type="submit">Отправить</button>
             </form>
             <div class="button close">
             </div>
